A bunch of asteroids

--- a/pages/asteroid-belt.html
+++ b/pages/asteroid-belt.html
@@ -177,7 +177,7 @@ link: asteroid-belt
                     <p class="paragraph">
                         Another upcoming mission is MBR Explorer, planned by the UAE Space Agency.
                         It will first fly by six asteroids - Westerwald, Chimaera, Rockox, Ghaf, Ousha, and Moza.
-                        Then, it will orbit a seventh, Justitia, and lastly land, examining the prospects of asteroid mining.
+                        Then, it will orbit a seventh, <a href="justitia.html">Justitia</a>, and lastly land, examining the prospects of asteroid mining.
                         Justitia is an unusually red asteroid, suggesting it is tholin-rich and has likely migrated from the outer Solar System. 
                     </p>
                 <h2 id="ExternalLinks">External links</h2>
