--- a/pages/asteroid.html
+++ b/pages/asteroid.html
@@ -156,19 +156,21 @@ link: asteroid
                     Vulcanoids are a theoreticized group of satellites that orbit closer to the Sun than Mercury.
                     They are named after the planet that was proposed by Urbain Le Verrier, who predicted the existence of Neptune.
                     The planet Vulcan's existence was debunked by Einstein's theory of relativity.
+                    The main reason why none have been discovered is because they are very small and orbit too close to the Sun, which makes them hard to detect.
                 </p>
                 <p class="paragraph">
                     ꞌAylóꞌchaxnim asteroids are a group of asteroids within Venus's orbit.
                     So far, ꞌAylóꞌchaxnim is the only known asteroid of this family.
+                    The same problems of detecting Vulcanoids applies here.
                 </p>
                 <p class="paragraph">
                     There are several groups of orbit-crossing asteroids apart from Earth crossers (Apollo and Aten groups).
                     Many asteroids are part of several of those groups, as they cross the orbits of multiple planets.
                     Mars crossers are asteroids that have orbits crossing those of Mars, but are not necessarily NEAs.
                     Every Venus and Mercury crosser is also considered a near-Earth asteroid.
-                    A remarkable example is Phaeton, which has the smallest known perihelion of a named asteroid.
-                    It is a member of the Apollo group of NEAs and a potentially-hazardous asteroid, as well as a Mercury, Venus, and Mars crosser.
-                    2006 HY51 is another extreme example, which has the smallest known perihelion of a numbered minor planet, and falls into all the group Phaeton does, as well as being a Jupiter crosser.
+                    A remarkable example is <a href="phaethon.html">Phaeton</a>, which has the smallest known perihelion of a named asteroid.
+                    It is a member of the Apollo group of NEAs and is a potentially-hazardous asteroid, as well as a Mercury, Venus, and Mars crosser.
+                    2006 HY51 is another extreme example, which has the smallest known perihelion of a numbered minor planet, and falls into all the same groups as Phaeton, as well as being a Jupiter crosser.
                 </p>
                 <p class="paragraph">
                     Thule asteroids are a small group of asteroids that orbit closer to Jupiter, outside the Hildas.
@@ -195,12 +197,12 @@ link: asteroid
                     <p class="paragraph">
                         Hayabusa, launched by JAXA in 2003, was the first sample return mission.
                         It visited the small near-Eart asteroid <a href="itokawa.html">Itokawa</a>, after which it returned a capsule of regolith back to Earth.
-                        A follow-up mission, Hayabusa-2, visited another asteroid - <a href="ryugu.html">Ryugu</a>.
+                        A follow-up mission, Hayabusa2, visited another asteroid - <a href="ryugu.html">Ryugu</a>.
                         The samples returned contained not just silicate rocks, water ice, and simple organics, but also more complex organic compounds like uracil and vitamin B3.
-                        The spacecraft's mission has been extended and will now visit two more asteroids.
+                        The spacecraft's mission has been extended and will now flyby two more asteroids.
                         Meanwhile, the NASA mission OSIRIS-REx mapped extensively the potentially-hazardous asteroid <a href="bennu.html">Bennu</a> after which it landed to collect regolith.
                         The returned sample showed the presence of amino acids and all nucleobases for DNA and RNA.
-                        The next target of the mission (renamed OSIRIX-APEx for the extended mission) will next target another hazardous asteroid - <a href="apophis.html">Apophis</a>.
+                        The next target of the mission (renamed OSIRIX-APEX for the extended mission) will next target another hazardous asteroid, but without returning samples - <a href="apophis.html">Apophis</a>.
                     </p>
                     <p class="paragraph">
                         DART was launched in 2021 with one purpose - impacting into an asteroid.
@@ -218,7 +220,7 @@ link: asteroid
                     </div>
                     <h3 class="paragraphsubheader" id="UpcomingMissions">Upcoming missions</h3>
                     <p class="paragraph">
-                        After Hayabusa 2#'s visit of <a href="torifune.html">Torifune</a> and Hera's visit of the Didymos system, the next mission to an asteroid is Tianwen-2, launched in 2025.
+                        After Hayabusa2#'s visit of <a href="torifune.html">Torifune</a> and Hera's visit of the Didymos system, the next mission to an asteroid is Tianwen-2, launched in 2025.
                         This will be the fifth sample return of an asteroid and the second asteroid visited by CNSA, the target being <a href="kamooalewa.html">Kamo'oalewa</a>.
                         The spacecraft will then return a capsule and go for its second target, the asteroid 311P/PanSTARRS.
                         CNSA is also proposing a deflection test mission this decade.
@@ -239,7 +241,7 @@ link: asteroid
                         JAXA is sending a tech demonstration spacecraft DESTINY+ to the asteroid Phaethon, parent body of the Geminids meteor shower.
                         It will collect samples from the dust it leaves behind.
                         Another upcoming mission is MBR Explorer, planned by the UAE Space Agency.
-                        It will fly by six asteroids before landing on a seventh, Justitia, examining the prospects of asteroid mining.
+                        It will fly by six asteroids before landing on a seventh, <a href="justitia.html">Justitia</a>, examining the prospects of asteroid mining.
                         Justitia is an unusually red asteroid, suggesting it is tholin-rich and has likely migrated from the outer Solar System. 
                     </p>
                 </div>
