--- a/pages/comet.html
+++ b/pages/comet.html
@@ -21,7 +21,7 @@ link: comet
                         Comets are notable for their highly eccentric orbits, which can be classified by orbital period: short-period comets (under 200 years) and long-period comets (over 200 years, sometimes thousands, or even millions.)
                         They originate from the outer regions of icy bodies like the Kuiper belt, or the Oort cloud.
                         Some comets follow parabolic or hyperbolic trajectories, passing the Sun only once before being ejected into interstellar space.
-                        Rarely, interstellar objects from outside the Solar System also exhibit cometary activity.
+                        Rarely, <a href="interstellar-object.html">interstellar objects</a> from outside the Solar System enter it, and some exhibit cometary activity.
                     </p>
                     <p class="paragraph">
                         Due to their dynamic nature, comets may disintegrate from tidal forces, collide with other bodies, be ejected from the Solar System, or become extinct - losing their volatile materials, leaving an <a href="asteroid.html">asteroid</a> behind.
@@ -133,6 +133,7 @@ link: comet
                     Centaurs are thought to be transitional objects, originating from the Kuiper belt and eventually evolving into short-period comets.
                 </p>
                 <h3 class="paragraphheader" id="InterstellarComets">Interstellar comets</h3>
+                <p class="readmore">Main article: <a href="interstellar-object .html">Interstellar object</a></p>
                 <p class="paragraph">
                     Interstellar objects are characterized by hyperbolic trajectories, particularly eccentricities significantly greater than 1, indicating an origin outside the Solar System.
                     Among the three known interstellar visitors, 2I/Borisov and 3I/ATLAS exhibit clear cometary activity, classifying them as interstellar comets.
@@ -172,6 +173,30 @@ link: comet
                     Repeated passages near the Sun gradually deplete a comet’s volatile ices, transforming it into an inert, asteroid-like remnant.
                     This process, known as extinction, occurs more rapidly in long-period comets than in Jupiter-family comets.
                     Studies suggest that up to 6% of <a href="nea.html">near-Earth asteroids</a> may be extinct cometary nuclei.
+                </p>
+                <h2 class="paragraphheader" id="Exploration">Exploration</h2>
+                <p class="paragraph">
+                    The first mission to a comet was the International Cometary Explorer in 1985, which passed through the plasma tail of 21P/Giacobini-Zinner at a distance of 7,800 km.
+                    In 1996, a series of spacecraft visited 1P/Halley, among which are Giotto by ESA and the two VeGa missions by the Soviet Union.
+                    Giotto, apart from making the closest approach (605 km) and returning the first images of a cometary nucleus, also passed 26P/Grigg-Skjellerup at 200 km, but its camera got destroyed during the Halley flyby.
+                    Deep Space 1 also visited 19P/Borelly in 2001 as a part of an extended mission.
+                </p>
+                <p class="paragraph">
+                    Stardust was a mission that collected dust samples from the coma of comet 81P/Wild 2 in 2004, as well as samples of cosmic dust, and returned them to Earth for analysis.
+                </p>
+                <p class="paragraph">
+                    Rosetta was a mission by ESA to the comet 67P/Churyumov-Gerasimenko.
+                    In 2014, it reached the comet, entered orbit and deployed the lander Philae.
+                </p>
+                <p class="paragraph">
+                    In 2005, the Deep Impact probe blasted a crater on Comet 9P/Tempel 1 to study its interior.
+                    The results showed that most of a comet's water ice is below the surface.
+                    Renamed EPOXI, it made a flyby of comet 103P/Hartley 2 in 2010.
+                    As part of Stardust's extended mission, it revisited Tempel 1 and its crater, caused by Deep Impact.
+                </p>
+                <p class="paragraph">
+                    In 2035, Tianwen-2 will visit comet 311P/PANSTARRS as part of its extended mission after collecting samples from near-Earth asteroid and quasi-satellite of Earth <a href="kamooalewa.html">Kamo'oalewa</a>.
+                    Another upcoming mission is the Comet Interceptor by ESA and JAXA, which will wait for a suitable long-period comet to fly by.
                 </p>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
