--- a/pages/didymos.html
+++ b/pages/didymos.html
@@ -14,7 +14,8 @@ link: didymos
                         65803 Didymos is a sub-kilometer <a href="nea.html">near-Earth asteroid</a> that is also potentially hazardous.
                         It has one known <a href="natural-satellite.html">moon</a> called Dimorphos.
                         The moon itself was the target of the DART impactor, the first <a href="asteroid.html">asteroid</a> deflection test.
-                        The ESA mission Hera is on its way to the system to study the results from the DART impact.
+                        The impact successfully altered Dimorphos’s orbit around Didymos.
+                        The ESA mission Hera is on its way to the system to study further the results from the DART impact.
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="Discovery">Discovey</h2>
