--- a/pages/eros.html
+++ b/pages/eros.html
@@ -14,6 +14,7 @@ link: eros
                         433 Eros is a <a href="nea.html">near-Earth asteroid</a>, member of the Amor group.
                         It was the first <a href="asteroid.html">asteroid</a> discovered near <a href="earth.html">Earth</a> and is one of the largest in that population.
                         It is named after the Greek god of erotic love and desire.
+                        Eros is a solid, undifferentiated body with a homogeneous interior, rather than a rubble pile.
                         The asteroid has been visited by the first spacecraft dedicated to studying asteroids - NEAR Shoemaker.
                     </p>
                 </div>
