--- a/pages/itokawa.html
+++ b/pages/itokawa.html
@@ -12,7 +12,7 @@ link: itokawa
                     </div>
                     <p class="paragraph">
                         25143 Itokawa is a sub-kilometer <a href="nea.html">near-Earth asteroid</a> part of the Apollo group and is potentially hazardous.
-                        Itokawa became the first <a href="asteroid.html">asteroid</a> from which samples were captured and brought to <a href="earth.html">Earth</a> for analysis.
+                        Itokawa became the first <a href="asteroid.html">asteroid</a> from which samples were captured and brought to <a href="earth.html">Earth</a> for analysis after Hayabusa gathered dust particles from its surface.
                         It is also the smallest asteroid visited by a spacecraft so far, if the <a href="natural-satellite.html">moon</a> of <a href="didymos.html">Didymos</a> is not counted.
                         The asteroid is a rubber pile made up of many fragments, as well as dust ponds that fill up depressions.
                     </p>
@@ -62,7 +62,7 @@ link: itokawa
                     The largest crater, Miyabaru, roughly 90 m in diameter, is not well-defined.
                     More notable features are dust ponds, which appear smoother than other surfaces.
                     The largest such region is MUSES-C Regio, between the two lobes, around 230 meters in area.
-               </p>
+                </p>
                 <h2 class="paragraphheader" id="Exploration">Exploration</h2>
                 <p class="paragraph">
                     Itokawa has been the target of the Hayabusa sample return mission by JAXA, the Japanese space agency,
