--- a/pages/jupiter.html
+++ b/pages/jupiter.html
@@ -46,7 +46,7 @@ link: jupiter
                     </div>
                     <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
                     <p class="paragraph">
-                        Jupiter has a semi-major axis of 5.2 AU and is the fifthe planet from the Sun, with an orbit ranging from 4.95 AU at perihelion and 5.46 AU at aphelion.
+                        Jupiter has a semi-major axis of 5.2 AU and is the fifth planet from the Sun, with an orbit ranging from 4.95 AU at perihelion and 5.46 AU at aphelion.
                         It takes 11.86 Earth years to complete one orbit.
                         The orbital plane of Jupiter is inclined 1.30° relative to the ecliptic and has an eccentricity of 0.049.
                     </p>
@@ -100,7 +100,7 @@ link: jupiter
                 <h3 class="paragraphsubheader" id="SizeAndMass">Size and mass</h3>
                 <p class="paragraph">
                     Jupiter is the largest planet in the Solar System.
-                    It has a mean diameter of 139,822 kilometers, or 10.9 times that of Earth and roughly one-tenth the diameter of the Sun.
+                    It has a mean diameter of 139,772 kilometers, or 11 times that of Earth and roughly one-tenth the diameter of the Sun.
                     Jupiter’s mass is 2.5 times greater than the combined mass of all other planets in the Solar System, exerting a gravitational influence that shapes the orbits of asteroids and comets.
                 </p>
                 <p class="paragraph">
@@ -290,6 +290,9 @@ link: jupiter
                     </li>
                     <li>
                         <a href="http://www.minorplanetcenter.net/iau/lists/JupiterTrojans.html">http://www.minorplanetcenter.net/iau/lists/JupiterTrojans.html</a>
+                    </li>
+                    <li>
+                        <a href="https://www.nature.com/articles/s41550-026-02777-x.epdf">https://www.nature.com/articles/s41550-026-02777-x.epdf</a>
                     </li>
                     <li>
                         <a href="https://www.space.com/37005-jupiter-fuzzy-core-nasa-juno.html">https://www.space.com/37005-jupiter-fuzzy-core-nasa-juno.html</a>
