--- a/pages/lutetia.html
+++ b/pages/lutetia.html
@@ -61,7 +61,7 @@ link: lutetia
                 <h2 class="paragraphheader" id="Exploration">Exploration</h2>
                 <p class="paragraph">
                     Lutetia was one of two secondary asteroid flyby targets for the Rosetta spacecraft by ESA, the other being asteroid <a href="steins.html">Šteins</a>.
-                    On 10 July 2010, it flew by 3168 km at its closest and obtained several images of the northern half before going to comet 67P/ Churyumov-Gerasimenko.
+                    On 10 July 2010, it flew by 3168 km at its closest and obtained several images of the northern half before going to comet 67P/Churyumov-Gerasimenko.
                 </p>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
