--- a/pages/nea.html
+++ b/pages/nea.html
@@ -96,13 +96,14 @@ link: nea
                     <p class="paragraph">
                         Hayabusa, launched by JAXA in 2003, was the first sample return mission.
                         It visited the small near-Eart asteroid <a href="itokawa.html">Itokawa</a>, after which it returned a capsule of regolith back to Earth.
-                        A follow-up mission, Hayabusa-2, visited another asteroid - <a href="ryugu.html">Ryugu</a>.
+                        A follow-up mission, Hayabusa2, visited another asteroid - <a href="ryugu.html">Ryugu</a>.
                         The samples returned contained not just silicate rocks, water ice, and simple organics, but also more complex organic compounds like uracil and vitamin B3.
-                        The spacecraft's mission has been extended and will now visit two more asteroids.
+                        The spacecraft's mission has been extended and will now flyby two more asteroids - <a href="torifune.html">Torifune</a> and 1998 KY26.
+                        The Torifune flyby will be challenging, as Hayabusa2# will pass it at high speeds.
                         Meanwhile, the NASA mission OSIRIS-REx mapped extensively the potentially-hazardous asteroid <a href="bennu.html">Bennu</a> after which it landed to collect regolith.
                         The returned sample showed the presence of amino acids and all nucleobases for DNA and RNA.
-                        The next target of the mission (renamed OSIRIX-APEx for the extended mission) will next target another hazardous asteroid - Apophis.
-                        There are also two proposal missions by ESA to Apophis but without taking samples.
+                        The next target of the mission (renamed OSIRIX-APEX for the extended mission) will next target another hazardous asteroid, but without returning samples - Apophis.
+                        There are also two proposal missions by ESA to Apophis.
                     </p>
                 </div>
                 <div class="articlediv">
@@ -122,13 +123,13 @@ link: nea
                         One more near-Earth asteroid has been visited as a secondary target, that being <a href="toutatis.html">Toutatis</a> by Chang'e 2. 
                     </p>
                     <p class="paragraph">
-                        After Hayabusa 2#'s visit of <a href="torifune.html">Torifune</a> and Hera's visit of the Didymos system, the next mission to an asteroid is Tianwen-2, launched in 2025.
+                        After Hayabusa2#'s visit of  and Hera's visit of the Didymos system, the next mission to an asteroid is Tianwen-2, launched in 2025.
                         This will be the fifth sample return of an asteroid and the second asteroid visited by CNSA, the target being <a href="kamooalewa.html">Kamo'oalewa</a>.
                         The spacecraft will then return a capsule and go for its second target, the asteroid 311P/PanSTARRS.
                         CNSA is also proposing a deflection test mission this decade.
                     </p>
                     <p class="paragraph">
-                        JAXA is sending a tech demonstration spacecraft DESTINY+ to the asteroid Phaethon, parent body of the Geminids meteor shower.
+                        JAXA is sending a tech demonstration spacecraft DESTINY+ to the asteroid <a href="phaethon.html">Phaethon</a>, parent body of the Geminids meteor shower.
                         It will collect samples from the dust it leaves behind.
                     </p>
                 </div>
