--- a/pages/pallas.html
+++ b/pages/pallas.html
@@ -58,7 +58,7 @@ link: pallas
                 </p>
                 <h3 class="paragraphsubheader" id="Structure">Structure</h3>
                 <p class="paragraph">
-                    Pallas is a B-type asteroid - a bright carbonaceous type, characterized by low water and iron, olivine and pyroxene silicates and carbonaceous material.
+                    Pallas is a B-type asteroid - a spectrally "blue" carbonaceous type, characterized by low water and iron, olivine and pyroxene silicates and carbonaceous material.
                     It is comparable to C chondrites, in particular the CR chondrites (Renazzo family of meteorites).
                     Its density is around 2.8 g/cm^3, suggesting mostly rocky composition, but less than rocky planets.
                     The spectral type excludes much ie, so the interior might be more porous instead.
