--- a/pages/pluto.html
+++ b/pages/pluto.html
@@ -179,7 +179,7 @@ link: pluto
                         New Horizons discovered evidence of ongoing geological processes, including possible cryovolcanoes and glacier flows.
                     </p>
                     <p class="paragraph">
-                        After the Pluto visit, New Horizons headed to the edge of the Solar System, encountering a single object in the meantime - Arrokoth.
+                        After the Pluto visit, New Horizons headed to the edge of the Solar System, encountering a single object in the meantime - <a href="arrokoth.html">Arrokoth</a>.
                     </p>
                 </div>
                 <h2 id="ExternalLinks">External links</h2>
