--- a/pages/satellites-of-saturn.html
+++ b/pages/satellites-of-saturn.html
@@ -27,7 +27,7 @@ link: satellites-of-saturn
                     Hyperion was discovered in 1848 by W. C. Bond, G. P. Bond and William Lassell.
                 </p>
                 <p class="paragraph">
-                    Thanks to advancement in technology and the introduction of photography into astronomy, new moons were discovered - Phoebe in 1899, Janus and Epimetheus in 1966, and Helene, Telesto, and Calypso in 1980.
+                    Thanks to advancement in technology and the introduction of photography into astronomy, new moons were discovered - Phoebe in 1899, <a href="janus.html">Janus</a> and <a href="epimetheus.html">Epimetheus</a> in 1966, and Helene, Telesto, and Calypso in 1980.
                     The Voyager program lead to the discovery of Atlas, Prometheus, and Pandora.
                     Pan was seen in archival images from that program in 1990.
                     All the other inner moons were discovered by the Cassini spacecraft.
