--- a/pages/saturn.html
+++ b/pages/saturn.html
@@ -221,7 +221,7 @@ link: saturn
                 <p class="paragraph">
                     There are 17 other regular moons of Saturn - their orbits are nearly circular and have low inclinations.
                     The innermost moon (provisional name S/2009 S 1) is the smallest known Saturnian satellite and orbits near the B ring.
-                    The next eight moons - Pan, Daphnis, Atlas, Prometheus, Pandora, Epimetheus, Janus, and Aegaon are all within the orbit of Mimas.
+                    The next eight moons - Pan, Daphnis, Atlas, Prometheus, Pandora, <a href="epimetheus.html">Epimetheus</a>, <a href="janus.html">Janus</a>, and Aegaon are all within the orbit of Mimas.
                     All but Atlas, Pandora, and Aegaon are shepherd moons, even though Atlas has an equatorial ridge.
                     Between the orbits of Mimas and Enceladus orbit three more satellites - Methone, Anthe, and Pallene.
                     The next two are trojans of Tethys - Telesto and Calypso, after which are the trojans of Dione - Helene and Polydeuces.
