--- a/pages/solar-system.html
+++ b/pages/solar-system.html
@@ -170,6 +170,9 @@ link: solar-system
                         They are composed of ice, dust, and organic compounds.
                         Famous "great comets" like <a href="halley.html">Halley’s Comet</a> and Comet Hale-Bopp have captivated human imagination for centuries, since they can be seen from Earth.
                     </p>
+                    <p class="paragraph">
+                        Occasionally, <a href="interstellar-object.html">interstellar objects</a> enter the Solar System, some exhibiting comet-like properties.
+                    </p>
                 </div>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
