--- a/pages/tno.html
+++ b/pages/tno.html
@@ -85,14 +85,15 @@ link: tno
                 <div class="articlediv">
                     <div class="captionbox right h180">
                         <img class="articleimage" src="../assets/images/tnos/arrokoth.png" alt="Arrokoth">
-                        <p class="caption">486958 Arrokoth</p>
+                        <p class="caption">Arrokoth</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Arrokoth">Arrokoth</h3>
+                    <p class="readmore">Main article: <a href="arrokoth.html">486958 Arrokoth</a></p>
                     <p class="paragraph">
-                        Arrokoth is a small TNO in the Kuiper belt. 
+                        <a href="arrokoth.html">486958 Arrokoth</a> is a small TNO in the Kuiper belt. 
                         It was visited by New Horizons in 2019 and is the farthest from Earth object visited by a spacecraft. 
                         The name means "sky" in the extinct Powhatan language. 
-                        It is a contact binary composed of two conjoined planetesimals.
+                        It is a red contact binary composed of two conjoined planetesimals.
                     </p>
                 </div>
                 <h2 id="ExternalLinks">External links</h2>
