--- a/pages/trojan.html
+++ b/pages/trojan.html
@@ -81,7 +81,7 @@ link: trojan
                     <p class="paragraph">
                         The <a href="natural-satellite.html">moons</a> <a href="dione.html">Dione</a> and <a href="tethys.html">Tethys</a> of <a href="saturn.html">Saturn</a> have each two trojan moons.
                         These are Helene and Polydeuces of Dione and Telesto and Calypso of Tethys.
-                        No other known examples of trojan moons are known, although there are other co-orbital moons - Janus and Epimetheus, also moons of Saturn.
+                        No other known examples of trojan moons are known, although there are other co-orbital moons - <a href="janus.html">Janus</a> and <a href="epimetheus.html">Epimetheus</a>, also moons of Saturn.
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="Exploration">Exploration</h2>
