Minor edits, some new pages

--- a/pages/asteroid.html
+++ b/pages/asteroid.html
@@ -221,7 +221,7 @@ link: asteroid
                     <h3 class="paragraphsubheader" id="UpcomingMissions">Upcoming missions</h3>
                     <p class="paragraph">
                         After Hayabusa2#'s visit of <a href="torifune.html">Torifune</a> and Hera's visit of the Didymos system, the next mission to an asteroid is Tianwen-2, launched in 2025.
-                        This will be the fifth sample return of an asteroid and the second asteroid visited by CNSA, the target being <a href="kamooalewa.html">Kamo'oalewa</a>.
+                        This will be the fifth sample return of an asteroid and the second asteroid visited by CNSA, the target being <a href="kamooalewa.html">Kamoʻoalewa</a>.
                         The spacecraft will then return a capsule and go for its second target, the asteroid 311P/PanSTARRS.
                         CNSA is also proposing a deflection test mission this decade.
                     </p>
