--- a/pages/bennu.html
+++ b/pages/bennu.html
@@ -76,8 +76,12 @@ link: bennu
                         Other major components include magnetite, sulfides, carbonates, organic compounds, as well as Mg and Na-rich phosphate minerals.
                         Bennu also contains the original ingredients that formed the <a href="solar-system.html">Solar System</a>, making it a "time capsule".
                         They were present in the form of carbides and graphite.
+                    </p>
+                    <p class="paragraph">
                         The most important findings are those of carbon- and nitrogen-rich organic compounds.
                         These include 14 of the 20 amino acids that make up proteins in terrestrial organisms, as well as all five nucleobases that make up DNA and RNA molecules - adenine, thymine, cytosine, guanine, and uracil.
+                        More recent analysis has shown the presence of the sugars glucose and ribose, the latter being yet another RNA component.
+                        Deoxyribose, which is part of DNA molecules, however, has so far been absent.
                         Water, clay minerals, phosphates, amino acids and nucleobases were all essential building blocks for the birth of life on Earth.
                     </p>
                     <p class="paragraph">
@@ -113,5 +117,8 @@ link: bennu
                     </li>
                     <li>
                         <a href="https://science.nasa.gov/solar-system/asteroids/101955-bennu/">https://science.nasa.gov/solar-system/asteroids/101955-bennu/</a>
+                    </li>
+                    <li>
+                        <a href="https://www.nasa.gov/missions/osiris-rex/sugars-gum-stardust-found-in-nasas-asteroid-bennu-samples/">https://www.nasa.gov/missions/osiris-rex/sugars-gum-stardust-found-in-nasas-asteroid-bennu-samples/</a>
                     </li>
                 </ul>
