--- a/pages/comet.html
+++ b/pages/comet.html
@@ -42,6 +42,7 @@ link: comet
                     <p class="paragraph">
                         In the 16th century, Tycho Brahe was the first to prove using parallax measurements that comets were not atmospheric events, but distant celestial objects.
                         Issaac Newton suggested that comets were astronomical bodies, and as such they would follow an orbit in the shape of a conic section.
+                        Edmond Halley used Newton's new laws of gravity and motion to calculate the gravitational effects of Jupiter and Saturn on the orbits of 24 comet apparitions.
                         He identified that those of 1531, 1607, and 1682 were the same and that it would return somewhere in 1758-59.
                         Though he did not live to see it, the comet was named <a href="halley.html">Halley’s Comet</a>, making it the first recognized as periodic.
                     </p>
@@ -195,7 +196,7 @@ link: comet
                     As part of Stardust's extended mission, it revisited Tempel 1 and its crater, caused by Deep Impact.
                 </p>
                 <p class="paragraph">
-                    In 2035, Tianwen-2 will visit comet 311P/PANSTARRS as part of its extended mission after collecting samples from near-Earth asteroid and quasi-satellite of Earth <a href="kamooalewa.html">Kamo'oalewa</a>.
+                    In 2035, Tianwen-2 will visit comet 311P/PANSTARRS as part of its extended mission after collecting samples from near-Earth asteroid and quasi-satellite of Earth <a href="kamooalewa.html">Kamoʻoalewa</a>.
                     Another upcoming mission is the Comet Interceptor by ESA and JAXA, which will wait for a suitable long-period comet to fly by.
                 </p>
                 <h2 id="ExternalLinks">External links</h2>
