--- a/pages/haumea.html
+++ b/pages/haumea.html
@@ -13,7 +13,7 @@ link: haumea
                     <p class="paragraph">
                         Haumea is the third largest <a href="dwarf-planet.html">dwarf planet</a>.
                         It was discovered in 2004.
-                        It is named after the Hawaiian goddess of fertility.
+                        It is named after the Hawaiʻian goddess of fertility.
                     </p>
                     <p class="paragraph">
                         It takes four hours to complete a rotation around it's axis, causing it's shape to be an ellipsoid.
@@ -25,7 +25,7 @@ link: haumea
                 <h2 class="paragraphheader" id="Discovery">Discovery</h2>
                 <p class="paragraph">
                     Haumea was first discovered by Mike Brown, Chad Trujillo, and David Rabinowitz in December 2004 at the Palomar observatory in California, from imgaes taken earlier in May at the Cerro Tololo Inter-American Observatory in Chile.
-                    At the time, this team was searching for large objects beyond the orbit of <a href="neptune.html">Neptune</a>, suspecting that <a href=".html">Pluto</a> was not the only similarly-sized body there.
+                    At the time, this team was searching for large objects beyond the orbit of <a href="neptune.html">Neptune</a>, suspecting that <a href="pluto.html">Pluto</a> was not the only similarly-sized body there.
                     They found partial success with the discovery of objects like <a href="quaoar.html">Quaoaor</a>, <a href="sedna.html">Sedna</a>, and <a href="orcus.html">Orcus</a> in 2002, 2003 and 2004 respectively.
                     After their discovery of Haumea, the team also found two other large objects in January and March 2005 - <a href="eris.html">Eris</a> and <a href="makemake.html">Makemake</a>.
                     These three were larger than any other object in this region except Pluto, though Eris was initially thought to be larger.
@@ -43,12 +43,12 @@ link: haumea
                     The decision was controversial among the public due to people, which knew Pluto as a planet their whole life, perceived the change as a "demotion".
                 </p>
                 <p class="paragraph">
-                    Mike Brown's team later discovered two moons at the Keck Observatory on Mauna Kea, Hawai'i.
+                    Mike Brown's team later discovered two moons at the Keck Observatory on Mauna Kea, Hawaiʻi.
                 </p>
                 <h2 class="paragraphheader" id="Name">Name</h2>
                 <p class="paragraph">
-                    Haumea is named after the Hawaiian goddess of fertility.
-                    This name was suggested by Brown's team, after dicovering the two moons in Hawai'i.
+                    Haumea is named after the Hawaiʻian goddess of fertility.
+                    This name was suggested by Brown's team, after dicovering the two moons in Hawaiʻi.
                     Originally, the right to name Haumea was given to the Ortiz-led team, but their suggestion - the Iberian goddess of the underworld Ataecina - was rejected for not conforming to the naming conventions of the IAU.
                     Such names of underworld deities were accepted only for plutinos, while other TNOs are given mythological names, particularly those of deities of creation.
                     Haumea has a minor planet number of 136108 and had a provisional name 2003 EL61.
@@ -100,7 +100,7 @@ link: haumea
                 <h2 class="paragraphsubheader" id="Satellites">Satellites</h2>
                 <p class="paragraph">
                     Haumea has two small satellites - Hi'iaka and Namaka.
-                    Both are named after daughters of Haumea - Hi'iaka is the patron goddess of the island of Hawaii, while Namaka is a water spirit.
+                    Both are named after daughters of Haumea - Hi'iaka is the patron goddess of the island of Hawaiʻi, while Namaka is a water spirit.
                     They are likely a result from the collision that Haumea experienced.
                     The two moons have a diameter of aroud 310 and 170 km respectively.
                     Namaka, which orbits closer to Haumea and has a mass one tenth of Hi'iaka, is also following a more pertrubed orbit.
