--- a/pages/mars.html
+++ b/pages/mars.html
@@ -282,6 +282,11 @@ link: mars
                     The mission was postponed due to worsening relations due to Russia's ongoing invasion of Ukraine.
                 </p>
                 <p class="paragraph">
+                    So far, the Mars 2020 mission that sent the Perseverance rover and the Ingenuity helicopter has lead to the most compelling arguments for life once existing on Mars.
+                    The potential biosignature was collected from a sedimentary deposit in the Neretva Vallis near the Jezero Crater and is made of mostly silt and clay, which are excellent preservers of past microbial life.
+                    The most interesting finding was the presence of the minerals vivianite and greigite, both of which could form from organic matter.
+                </p>
+                <p class="paragraph">
                     Plans for colonizing Mars were proposed multiple times.
                     NASA and CNSA both plan on sending people on Mars as early as the 2030s.
                     SpaceX, a privately held company, has proposed its own missions to Mars with the intent of colonizing and settling the planet.
@@ -293,6 +298,9 @@ link: mars
                     </li>
                     <li>
                         <a href="https://en.wikipedia.org/wiki/Mars">https://en.wikipedia.org/wiki/Mars</a>
+                    </li>
+                    <li>
+                        <a href="https://www.nasa.gov/news-release/nasa-says-mars-rover-discovered-potential-biosignature-last-year/">https://www.nasa.gov/news-release/nasa-says-mars-rover-discovered-potential-biosignature-last-year/</a>
                     </li>
                 </ul>
                 <div class="cat">
